--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -13,7 +13,7 @@
  <ol class="breadcrumb" id="breadcrumbAds">
               <li class="active"><a href="<%= ads_path %>"><i class="fa fa-tags"></i> Anúncios</a></li>
       </ol>
-    <div class="row">
+    <div class="row" style="margin-right: -15px;">
       
 
       <% @ads.each do |ad| %>
