--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
-<h2>Your Inbox</h2>
+<h2>A tua caixa de entrada</h2>
 <% if @talks.size == 0 %>
-No messages in your Inbox
+Nenhuma mensagem na tua caixa de entrada
 <% end %>
 
 
