--- a/app/views/price_types/_form.html.erb
+++ b/app/views/price_types/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@price_type) do |f| %>
   <% if @price_type.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@price_type.errors.count, "error") %> prohibited this price_type from being saved:</h2>
+      <h2><%= pluralize(@price_type.errors.count, "error") %> proibiu este tipo de preço de ser salvado:</h2>
 
       <ul>
       <% @price_type.errors.full_messages.each do |msg| %>
