--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,6 @@
-<h2>Your Inbox</h2>
+<h2>A tua caixa de entrada</h2>
 <% if @messages.size == 0 %>
-No messages in your Inbox
+Nenhuma mensagem na tua caixa de entrada
 <% else %>
 					<%= @talk.user_one %>
 
