--- a/app/views/price_types/edit.html.erb
+++ b/app/views/price_types/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing price_type</h1>
+<h1>Editar tipo de preço</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @price_type %> |
-<%= link_to 'Back', price_types_path %>
+<%= link_to 'Ver', @price_type %> |
+<%= link_to 'Voltar', price_types_path %>
