--- a/app/views/price_types/index.html.erb
+++ b/app/views/price_types/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing price_types</h1>
+<h1>Listar tipo de preços</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nome</th>
       <th></th>
       <th></th>
       <th></th>
@@ -14,9 +14,9 @@
     <% @price_types.each do |price_type| %>
       <tr>
         <td><%= price_type.name %></td>
-        <td><%= link_to 'Show', price_type %></td>
-        <td><%= link_to 'Edit', edit_price_type_path(price_type) %></td>
-        <td><%= link_to 'Destroy', price_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', price_type %></td>
+        <td><%= link_to 'Editar', edit_price_type_path(price_type) %></td>
+        <td><%= link_to 'Destruir', price_type, method: :delete, data: { confirm: 'Tens a certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Price type', new_price_type_path %>
+<%= link_to 'Novo tipo de preço', new_price_type_path %>
