--- a/app/views/price_types/new.html.erb
+++ b/app/views/price_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New price_type</h1>
+<h1>Novo tipo de preço</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', price_types_path %>
+<%= link_to 'Voltar', price_types_path %>
