--- a/app/views/price_types/show.html.erb
+++ b/app/views/price_types/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @price_type.name %>
 </p>
 
-<%= link_to 'Edit', edit_price_type_path(@price_type) %> |
-<%= link_to 'Back', price_types_path %>
+<%= link_to 'Editar', edit_price_type_path(@price_type) %> |
+<%= link_to 'Voltar', price_types_path %>
