English to portugues ReTuRnS

--- a/app/views/ratings/edit.html.erb
+++ b/app/views/ratings/edit.html.erb
@@ -20,7 +20,7 @@
 	<div id="comment_rating" class="field" hidden="true">
 	  <%= f.label :commet %><br>
 	  <%= f.text_area :comment,:id => "text_comment_rating",:rows=>5,:class=> "form-control counted" ,:placeholder => "Escreve a tua mensagem"%>
-	  <h6 class="pull-right" id="counter">144 characters remaining</h6>
+	  <h6 class="pull-right" id="counter">144 characteres livres</h6>
 
 		</div>
 
