--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @type.name %>
 </p>
 
@@ -10,5 +10,5 @@
   <%= @type.flag %>
 </p>
 
-<%= link_to 'Edit', edit_type_path(@type) %> |
-<%= link_to 'Back', types_path %>
+<%= link_to 'Editar', edit_type_path(@type) %> |
+<%= link_to 'Voltar', types_path %>
