--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
 			            <div class="col-sm-10 col-md-10 col-md-offset-1">
 			                <div class="panel panel-primary">
 			                    <div class="panel-heading">
-			                        <h3 class="panel-title">Informacao do Utilizador</h3>
+			                        <h3 class="panel-title">Informação do Utilizador</h3>
 			                    </div>
 			                    <div class="panel-body">
 			                        <div class="row">
@@ -47,7 +47,7 @@
 			                                        <td><%= user.city.city %></td>
 			                                    </tr>
 			                                    <tr>
-			                                        <td>Aniversário</td>
+			                                        <td>Data de Nascimento</td>
 			                                        <td><%= user.birthday %></td>
 			                                    </tr>
 			                                    </tbody>
@@ -58,14 +58,14 @@
 			                    <div class="panel-footer">
 			                        <button class="btn btn-sm btn-primary" type="button"
 			                                data-toggle="tooltip"
-			                                data-original-title="Send message to user"><i class="glyphicon glyphicon-envelope"></i></button>
+			                                data-original-title="Enviar mensagem para o utilizador"><i class="glyphicon glyphicon-envelope"></i></button>
 			                        <span class="pull-right">
 			                            <button class="btn btn-sm btn-warning" type="button"
 			                                    data-toggle="tooltip"
-			                                    data-original-title="Edit this user"><i class="glyphicon glyphicon-edit"></i></button>
+			                                    data-original-title="Editar este utilizador"><i class="glyphicon glyphicon-edit"></i></button>
 			                            <button class="btn btn-sm btn-danger" type="button"
 			                                    data-toggle="tooltip"
-			                                    data-original-title="Remove this user"><i class="glyphicon glyphicon-remove"></i></button>
+			                                    data-original-title="Remover este utilizador"><i class="glyphicon glyphicon-remove"></i></button>
 			                        </span>
 			                    </div>
 			                </div>
