--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,7 +18,7 @@
                           <div class="field">
                             <%= m.label :text %><br>
                             <%= m.text_area :text,:id => "text_comment",:rows=>5,:class=> "form-control counted" ,:placeholder => "Escreve a tua mensagem"%>
-                            <h6 class="pull-right" id="counter">144 characters remaining</h6>
+                            <h6 class="pull-right" id="counter">144 characteres livres</h6>
                           </div>
                           <div class="field" hidden="true">
                             <%= m.label :user_sender %><br>
