--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@type) do |f| %>
   <% if @type.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@type.errors.count, "error") %> prohibited this type from being saved:</h2>
+      <h2><%= pluralize(@type.errors.count, "error") %> proibiu este tipo ser salvado:</h2>
 
       <ul>
       <% @type.errors.full_messages.each do |msg| %>
