--- a/app/views/types/edit.html.erb
+++ b/app/views/types/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing type</h1>
+<h1>Editar tipo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @type %> |
-<%= link_to 'Back', types_path %>
+<%= link_to 'Ver', @type %> |
+<%= link_to 'Voltar', types_path %>
