--- a/app/views/types/new.html.erb
+++ b/app/views/types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New type</h1>
+<h1>Novo tipo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', types_path %>
+<%= link_to 'Voltar', types_path %>
