--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
           </section>
           <section class="panel">
                   <div class="panel-body bio-graph-info">
-                                      <h1>Bio Graph</h1>
+                                      <h1>Biografia</h1>
                                       <div class="row">
                                           <div class="bio-row">
                                               <p><span>Alias </span>: <%= @user.name %></p>
