--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -37,26 +37,31 @@
 <section class="panel">
     
     <div class="panel-body">
-          <% if num_img > 0 %>
+          
       <div class="col-md-6">
 
         <!-- Image ADS -->
+           <% if num_img > 0 %>
             <div class="ads_img_section">
 
                 <div id="imageCarousel" class="carousel-inner">
-                  <% i=0 %>
-                  <% while (i < num_img) do %>
-                    <div class="<% if i>0 %>item<% else %>active item<% end %> ads_img">
-                      <table>
-                        <tr><td>
-                           <a href="<%= @ad.ad_images[i].image.url %>" rel="prettyPhoto[ad_gallery_carousel]">
-                              <%= image_tag @ad.ad_images[i].image(:large), :width => "100%" %>
-                           </a>
-                        </td></tr>
-                      </table>
-                    </div>
-                     <% i+=1 %>
-                   <% end %>
+                  
+                   
+                        <% i=0 %>
+                        <% while (i < num_img) do %>
+                          <div class="<% if i>0 %>item<% else %>active item<% end %> ads_img">
+                            <table>
+                              <tr><td>
+                                 <a href="<%= @ad.ad_images[i].image.url %>" rel="prettyPhoto[ad_gallery_carousel]">
+                                    <%= image_tag @ad.ad_images[i].image(:large), :width => "100%" %>
+                                 </a>
+                              </td></tr>
+                            </table>
+                          </div>
+                           <% i+=1 %>
+                         <% end %>
+
+                  
 
                    <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -115,6 +120,14 @@
                 
           </div>
 
+        <% else %>
+             <div id="imageCarousel" class="carousel-inner">
+                 <a class="ads_no_img">
+                        <img class="no_image" src="http://placehold.it/250x200">
+                </a>
+             </div>
+                   
+       <% end %>
     </div>
    <!-- Information ADS -->
           <div class="col-md-6">
@@ -174,7 +187,7 @@
 
 
           </div>
-       <% end %>
+       
   </div>
 
 </section>
@@ -317,6 +330,9 @@
        </div>
 
 </section>
+
+
+
 
 
 
