--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
         <div class="control-group">
           <%= f.label :birthday, "Data de Nascimento",:class=>"control-label" %>
           <div class="controls">
-            <%= f.text_field :birthday, :placeholder=>"dd/mm/yyyy", :class=> "datepicker form-control" %>
+            <%= f.text_field :birthday, :placeholder=>"mm/dd/yyyy", :class=> "datepicker form-control" %>
           </div>
         </div>
 
