--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -76,7 +76,7 @@
     <div class="control-group">
       <%= f.label :locatlion, "Localização da Venda" ,:class=>"control-label" %><br>
       <div class="controls">
-        <%= f.text_field :location,:placeholder =>"Localização da venda..." ,:class=>"form-control", :id=>"addresspicker_map"%>
+        <%= f.text_field :location,:placeholder =>"Localização da venda..." ,:class=>"form-control", :id=>"addresspicker_map",autocomplete: "off"%>
       </div>
 
       <div style="width:100%;height:350px;margin-top:20px">
