--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -82,4 +82,33 @@ font-weight: 300;
 	 padding: 0px;
 
 }
+/********** index ads **********/
+
+.ads_index_section{
+	margin-right: -15px;
+
+	width: auto;
+	height: auto;
+}
+
+.ads_index_img{
+	position: relative;
+}
+
+.ads_index_img_pos{
+
+	width: auto;
+	
+	 padding: 0px;
+
+	
+border-radius: 4px 4px 0 0;
+-webkit-border-radius: 4px 4px 0 0;
+}
+
+.pro_title{
+	display: inline-block;
+	margin-top: 20px;
+	font-size: 16px;
+}
 
