[Fix] thumbnail size in index

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -17,8 +17,7 @@
             <div class="col-sm-6 col-md-3">
               <div class="thumbnail">
                   <span class='price' ><%= ad.price %>€</span>
-                    <%# link_to ad_image( ad.ad_images.first ), ad %>
-                    <%= image_tag ad.ad_images.first.image(:ad_size) %>
+                    <%= link_to ad_image( ad.ad_images.first ), ad %>
                     <% if !ad.category.blank? %>
                       <div class="caption">
                           <% if ad.category.nil? %>
