--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -77,11 +77,20 @@
   </div>
 
 <script type="text/javascript">
+    var currentTime = new Date()  ;
+    var month = currentTime.getMonth() + 1   ;
+    var day = currentTime.getDate() ;
+    var year = currentTime.getFullYear() ;
+
     $('.datepicker').datepicker({
         todayBtn: true,
+        startView: 2,
+        format: "dd/mm/yyyy",
         language: "pt",
         autoclose: true,
         todayHighlight: true,
-        calendarWeeks: true
+        calendarWeeks: true,
+        startDate: day + "/" + month + "/" + (year - 100),
+        endDate: day + "/" + month + "/" + (year - 13)
     })
 </script>
