--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
                                       <h1>Biografia</h1>
                                       <div class="row">
                                           <div class="bio-row">
-                                              <p><span>Alias </span>: <%= @user.name %></p>
+                                              <p><span>Nome </span>: <%= @user.name %></p>
                                           </div>
                                           <div class="bio-row">
                                               <p><span>Cidade </span>:<% if @user.city %> <%= @user.city.city %><% end %></p>
