--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -5,9 +5,6 @@
     <header class="panel-heading">
       <div class="pull-right">
 
-        <%##  botão verde com um certo  ##%>
-        <%= link_to '<i class="icon-ok"></i>'.html_safe , "#", :class => "btn btn-success btn-xs" %>
-
         <%##  botão verde com um lapis para editar a pergunta  ##%>
         <%= link_to '<i class="icon-pencil"></i>'.html_safe , edit_academy_question_path(@academy_question), :class => "btn btn-primary btn-xs" if @academy_question.user.id == current_user.id %>
 
@@ -28,7 +25,7 @@
 
       <div class="col-xs-9 col-md-10 ">
         <%= @academy_question.text %><%##  texto da pergunta  ##%>
-        <br/>os botões de edit e eliminar não estão direitos
+        <br/>o botão de edit não está direito
         <p>
           <strong>Image url:</strong>
           <%= @academy_question.image_url %>
@@ -44,6 +41,7 @@
 </div>
 
 <%#  Display all the answers  %>
+<%#  needed to load the new answers without the need to reload  %>
 <div id="answers">
   <%= render @academy_question.answers %>
 </div>
