--- a/app/views/academy/questions/new.html.erb
+++ b/app/views/academy/questions/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New academy_question</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Nova Questão</h3>
+  </div>
+  <div class="panel-body">
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', academy_questions_path %>
+  </div>
+</div>
+
+ <%= link_to 'Voltar', academy_questions_path %>
