--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -36,7 +36,7 @@
               <span class="input-group-addon">€</span>
               <%= f.text_field :price,:placeholder => "Preço" ,:class=>"form-control" %>
             </div>
-            <label class="help-inline" id="ad_price" for="ad_price"></label>
+            <label class="help-inline" id="help_ad_price" for="ad_price"></label>
           </div>
         </div>
       </div>
