[Bug Fixed] New registration Responsive CSS

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="login-col-form_regist col-md-8">
+<div class="col-md-4 login-col-form">
 
   <div class="well col container">
     <legend><i class="fa fa-pencil"></i> Registo </legend>
