--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -3,10 +3,9 @@
   <div class="panel-body">
 
 <% if user_signed_in? %>
-
-<div style="text-align: center">
+    <div class="col-md-12 col-lg-12 col-xs-4" style="text-align: center">
       <% if current_user.avatar.url != nil %>
-      <%= image_tag current_user.avatar.url(:medium),:width => "70%",:class => "img-circle" %>
+      <%= image_tag current_user.avatar.url(:medium),:width => "50%",:class => "img-circle" %>
       <% else %>
 
       <% end %>
@@ -14,8 +13,6 @@
     <div class="row" style="margin-bottom:5px">
       <div class="col-md-8"><strong> <%= current_user.name  %></strong></div>
     </div>
-
-
 <% end -%>
 
   <div class="panel-group" id="accordion">
