--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,14 @@
             
             <div class="page-content inset">
               <div class="row">
-                <div class="col-md-2" style="padding-right:0px">
+                <div class="col-md-2 col-lg-2 col-sx-3" style="padding-right:0px">
                   <%= render "layouts/sidebar_left" %>
                 </div>
-                <div class="col-md-7" style="padding-right:15px">
+                <div class="col-md-7 col-lg-7 col-sx-9" style="padding-right:15px">
                   <%= yield %>
                 </div>
 
-                <div class="col-md-3" style="padding-right:15px;padding-left:0px">
+                <div class="col-md-3 col-lg-3 col-sx-12" style="padding-right:15px;padding-left:0px">
                   <%= render "layouts/sidebar_right_featured" %>
 
                     <%= render "layouts/sidebar_right_ad" %>
