--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,7 +26,8 @@
                                   <div class="form-group">
                                       <label class="col-lg-2 control-label">Data de Nascimento</label>
                                       <div class="col-lg-6">
-                                          <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>
+                                          <%= f.text_field :birthday, :placeholder=>"dd/mm/yyyy", :class=> "datepicker form-control" %>
+                                          <!--<%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>-->
                                       </div>
                                   </div>
                                   <div class="form-group">
@@ -100,7 +101,7 @@
                           <div class="panel-heading"> Salvar </div>
                                <div class="panel-body">
                                   <div class="form-group">
-                                          <label class="col-lg-2 control-label">Password actual</label>
+                                          <label class="col-lg-2 control-label">Password atual</label>
                                           <div class="col-lg-6">
                                               
                                                <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
@@ -176,4 +177,3 @@
 
 
 </aside> 
-
