[Update Feature] Academy: Answer

--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -28,14 +28,12 @@
       <%#  Verify if the user is logged or if is the answer's owner %>
       <% if !user_signed_in? || current_user.id == answer.user.id #if not logged or is the owner them cant vote %>
 
-
-
-        <i class="fa  fa-arrow-circle-o-up  fa-2x"></i>
-        <%= 1 %>
-        <i class="fa  fa-arrow-circle-down  fa-2x"></i>
+        <i class="icon-circle-arrow-up"></i>
+        <label class="label label-default" syle="font-size:10px"><%= answer.up - answer.down %></label>
+        <i class="icon-circle-arrow-down"></i>
       <% else %>
         <%= link_to '<i class="icon-circle-arrow-up"></i>'.html_safe, academy_up_vote_path(:answer => answer) %>
-        <%= 1 %>
+        <label class="label label-success" syle="font-size:10px"><%= answer.up - answer.down %></label>
         <%= link_to '<i class="icon-circle-arrow-down"></i>'.html_safe, academy_down_vote_path(:answer => answer) %>
       <% end %>
 <%###  end of answers votes  ###%>
